# captain-hook

./: captain-hook.cabal
src/CaptainHook/: Config.hs  Service.hs  Types.hs
src/CaptainHook/Publishers/AWS/: CloudFront.hs
src/CaptainHook/Subscribers/: Slack.hs
test/CaptainHook/: ServiceSpec.hs  TypesSpec.hs
