name:                captain-hook
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/captain-hook#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , CaptainHook.Service
                     , CaptainHook.Types
                     , CaptainHook.Publishers.AWS.CloudFront
                     , CaptainHook.Subscribers.Slack
  build-depends:       amazonka == 1.3.*
                     , amazonka-core == 1.3.*
                     , amazonka-cloudfront == 1.3.*
                     , base >= 4.7 && < 5
                     , bytestring == 0.10.*
                     , dotenv == 0.1.*
                     , aeson == 0.*
                     , time == 1.*
                     , lens == 4.13.*
                     , network-uri == 2.*
                     , transformers == 0.*
                     , text
                     , wreq == 0.4.*
  default-language:    Haskell2010
  extensions:          OverloadedStrings

executable captain-hook-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , captain-hook
  default-language:    Haskell2010
  extensions:          OverloadedStrings

test-suite captain-hook-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , captain-hook
                     , hspec == 2.*
                     , network-uri == 2.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extensions:          OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/captain-hook
